[metadata]
name = rep_1
description = Desarrollo de espectros de energía empleando registros de terremotos ocurridos en Perú, y la comparación de la energía que aporta al daño con los espectros de velocidades de la E.030
version = 0.0.1
author = orjan3
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    rep_1
install_requires =
    pyyaml
python_requires = >=3.6
package_dir =
    =./src
zip_safe = no

[options.extras_require]
dev =
    coverage
    detect-secrets == 1.0.3
    myst-parser
    pre-commit
    pytest
    detect-secrets
    python-dotenv
    Sphinx
    toml
